# $Id$

2007-04-14	Konstantin V. Arkhipov

	* core/OSQL/DBTable.class.php: now respect's column size during diff,
	if any.

	* main/Base/CompositeLightMetaProperty.class.php: replaced by
	InnerMetaProperty because of former unnecessary complexity.

2007-04-14	Anton E. Lebedevich
	
	* main/Flow/MultiPrefixPhpViewResolver.class.php: added resolver for
	multiple prefixes.

2007-04-13	Denis M. Gabaidulin

	* main/Criteria/Criteria.class.php: dropProjection() added.

2007-04-12	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: downFirst() added.

	* main/Utils/LogicUtils.class.php: getOpenPoint() added.

2007-04-11	Konstantin V. Arkhipov

	* main/DAOs/BaseDAO.class.php: get, getList and getCounterList
	removed.

	* main/DAOs/ObjectQuery.class.php: dropped finally.

2007-04-09	Anton E. Lebedevich
	
	* meta/types/ObjectType.class.php: unconditionally fill collection.

2007-04-09	Ivan Y. Khvostishkov

	* core/Base/Timestamp.class.php: toISOString() convertes it according to
	ISO 8601 standard.

	* core/Form/MappedForm.class.php: fixed ability to add more than one
	source for primitive.

	* core/Form/FormUtils.class.php: fixed object2form() for non-prototyped
	objects.

2007-04-09	Konstantin V. Arkhipov

	* core/Form/FormUtils.class.php: ported to new proto's.

	* main/Base/CompositeLightMetaProperty.class.php: new light property type
	implemented.

	* meta/builders/ValueObjectDaoBuilder.class.php,
	main/DAOs/ValueObjectDAO.class.php: dropped.

2007-04-08	Konstantin V. Arkhipov

	* main/DAOs/ProtoDAO.class.php: unified makeSelf() implemented.

	* main/Base/AbstractProtoClass.class.php: now able to generate Form
	from internal properties list.

	* meta/builders/AutoProtoClassBuilder.class.php: dropped generation of
	makeForm().

	* main/Base/LightMetaProperty.class.php: size and type properties
	added.

2007-04-08	Dmitry E. Demidov

	* main/Flow/RedirectView.class.php,
	main/Flow/RedirectToView.class.php: change visibility of getUrl 
	to public.
	