@@ -2,6 +2,9 @@
 
 2007-04-14	Konstantin V. Arkhipov
 
+	* core/Form/Primitives/PrimitivesBox.class.php: first step in
+	non-plain Form direction.
+
 	* core/OSQL/DBTable.class.php: now respect's column size during diff,
 	if any.
 
